[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vid-snatch"
version = "0.1.0"
description = "Download YouTube audio/video and optionally remove vocals"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.0.0",
    "demucs>=4.0.0",
]

[project.scripts]
vid-snatch = "vid_snatch:main"
